Closed
Bug 815030
Opened 13 years ago
Closed 13 years ago
background at http://k0s.org/pictures/specialfx/ no longer rendered
Categories
(Core :: Graphics, defect)
Tracking
()
VERIFIED
FIXED
mozilla20
People
(Reporter: k0scist, Assigned: roc)
References
Details
(Keywords: regression)
Attachments
(2 files)
589 bytes,
text/html
|
Details | |
5.07 KB,
patch
|
mattwoodrow
:
review+
lsblakk
:
approval-mozilla-aurora+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
This used to work in firefox and still works in chromium. The background at http://k0s.org/pictures/specialfx/ as specified by
"""
body {
background-image: url('/pictures/specialfx/oilstainreflection2.jpg');
background-repeat:no-repeat;
background-position: right;
background-attachment: fixed;
background-size: 100% 100%;
}
"""
is no longer rendered. If I unset background-attachment: fixed; it does work, albeit I want background-attachment: fixed; for this page. I'm not sure when this first stopped working.
![]() |
||
Comment 1•13 years ago
|
||
Pretty unlikely to be DOM.
Jeff, can you find a regression range on nightlies? Are you seeing this on Linux? Because I see the background just fine on Mac, both with a current nightly and Firefox 17.
Component: DOM → Graphics
![]() |
||
Comment 2•13 years ago
|
||
I can reproduce if HWA.
http://hg.mozilla.org/releases/mozilla-aurora/rev/4e0a8f234a6d
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121124042012
and
http://hg.mozilla.org/mozilla-central/rev/3c67034ba39c
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20.0 Firefox/20.0 ID:20121125030729
Steps to reproduce:
1. Disable HWA
2. Clear cache (if it is not a first attempt)
3. Restart Browser
4. Open http://k0s.org/pictures/specialfx/
Actual results:
Backgound is not rendered.
Reload page helps.
Expected results:
Background should be rendered at the first loading.
Regression wndow(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/58ebb638a7ea
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121115172150
Bad:
http://hg.mozilla.org/mozilla-central/rev/a7ed19f7d21a
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121116090659
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=58ebb638a7ea&tochange=a7ed19f7d21a
Regression wndow(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/244493403e89
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121115151651
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/2c2c6ddb6fe6
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/19.0 Firefox/19.0 ID:20121115163151
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=244493403e89&tochange=2c2c6ddb6fe6
Suspected: Bug 810470
Blocks: 810470
tracking-firefox18:
--- → ?
tracking-firefox19:
--- → ?
Keywords: regression
OS: Linux → All
![]() |
||
Comment 3•13 years ago
|
||
err in comment #2
s/I can reproduce if HWA./I can reproduce if HWA off./
![]() |
||
Updated•13 years ago
|
tracking-firefox18:
? → ---
tracking-firefox20:
--- → ?
Assignee | ||
Comment 4•13 years ago
|
||
The background should turn green, but does not.
The problem is that the background image caching we do in nsDisplayCanvasBackground::Paint never invalidates the CachedBackgroundImage in response to the image loading, or being changed.
Assignee: nobody → roc
Assignee | ||
Comment 5•13 years ago
|
||
And nsIFrame::ClearDisplayItemCache is never called.
Assignee | ||
Comment 6•13 years ago
|
||
Attachment #685521 -
Flags: review?(matt.woodrow)
Assignee | ||
Updated•13 years ago
|
Updated•13 years ago
|
Attachment #685521 -
Flags: review?(matt.woodrow) → review+
Updated•13 years ago
|
Assignee | ||
Comment 7•13 years ago
|
||
Comment 8•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
status-firefox20:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Comment 9•13 years ago
|
||
Reporter | ||
Comment 10•13 years ago
|
||
confirmed: wfm :) thanks!
Assignee | ||
Comment 11•13 years ago
|
||
Comment on attachment 685521 [details] [diff] [review]
fix
[Approval Request Comment]
Bug caused by (feature/regressing bug #): DLBI
User impact if declined: Missing background image on Web site
Testing completed (on m-c, etc.): a few days on m-c
Risk to taking this patch (and alternatives if risky): Low risk. Just invalidates some cached stuff more often.
String or UUID changes made by this patch: None
Attachment #685521 -
Flags: approval-mozilla-beta?
Attachment #685521 -
Flags: approval-mozilla-aurora?
Assignee | ||
Updated•13 years ago
|
Updated•13 years ago
|
Attachment #685521 -
Flags: approval-mozilla-beta?
Attachment #685521 -
Flags: approval-mozilla-beta+
Attachment #685521 -
Flags: approval-mozilla-aurora?
Attachment #685521 -
Flags: approval-mozilla-aurora+
Comment 12•13 years ago
|
||
Comment 13•13 years ago
|
||
WFM for Windows 7 x64, Ubuntu x86 and Mac OS 10.8 for FF18b4.
Comment 14•13 years ago
|
||
Verified fixed on Firefox 18 beta 4. (especially because of the testcase attached in comment 4; while following the STR from comment 2, I couldn't see significant changes between a Nightly from 2012-11-16 and beta 4).
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/20100101 Firefox/18.0
Build ID: 20121212073002
Updated•13 years ago
|
QA Contact: manuela.muntean
Comment 15•12 years ago
|
||
Verified fixed on Firefox 19 beta 2, based on the testcase provided in comment 4, with HWA on and off.
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:19.0) Gecko/20100101 Firefox/19.0
Build ID: 20130116072953
Comment 16•12 years ago
|
||
Fix is verified on FF20b5 too:
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:20.0) Gecko/20100101 Firefox/20.0(20130313170052)
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.7; rv:20.0) Gecko/20100101 Firefox/20.0(20130313170052)
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•